x-pack/plugins/code/public/components/symbol_tree/symbol_tree.scss
.code-structure-node {
  padding: $euiSizeXS;
}

.code-full-width-node {
  position: absolute;
  width: 100%;
  background: $euiColorLightShade;
  left: 0;
  height: 1.5rem;
  z-index: -1;
}

.euiSideNavItem__items {
  position: static;
}

.codeStructureTree--icon {
  margin: auto 0.25rem;
}

