fix(code/frontend): structure tab highlight, align and collapse

--- a/x-pack/plugins/code/public/components/symbol_tree/symbol_tree.scss
+++ b/x-pack/plugins/code/public/components/symbol_tree/symbol_tree.scss
@@ -8,7 +8,6 @@
   background: $euiColorLightShade;
   left: 0;
   height: 1.5rem;
-  z-index: -1;
 }
 
 .euiSideNavItem__items {
@@ -17,4 +16,10 @@
 
 .codeStructureTree--icon {
   margin: auto 0.25rem;
+}
+
+.code-symbol-link {
+  &:focus {
+    animation: none !important;
+  }
 }
